# grilly-next

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  profiles.json  pyproject.toml
benchmarks/: __init__.py  bench_attention.py  bench_buffer_pool.py  bench_device_local.py  bench_gemm.py  bench_linear.py  bench_memory.py  bench_model_shapes.py  bench_training.py  bench_vsa.py  benchmark_pipeline.py  benchmark_resonator.py  benchmark_retrieval.py  benchmark_semantic_assigner.py  test_490k_lean.py  test_eviction.py  test_gpu_timestamps.py  test_timing_breakdown.py  test_top1.py  test_vram_490k.py  utils.py
benchmarks/cpp/: bench_cubemind.py  bench_dispatch.py  bench_linear.py
cpp/python/: bindings.cpp
cpp/src/: autograd.cpp  buffer_pool.cpp  command_batch.cpp  device.cpp  op_graph.cpp  pipeline_cache.cpp
docs/: foundational_first_revision_paper.md  insights.md  paper.tex
docs/official_papers/: Hypernetworks for Faster Transformer Generation.md  Interpretable Hyper-Fast Language Model Decoder.md  Vulkan HDC Transformer Architecture Design.md
docs/plans/: 2026-02-28-vsa-hypernetwork-design.md  2026-02-28-vsa-hypernetwork.md  2026-02-28-vsa-training-loop-design.md  2026-02-28-vsa-training-loop.md  2026-03-09-residual-mlp-permute-bind-design.md
examples/: benchmark_gemm.py  classifier.py  experimental_backend_vsa.py  experimental_chat.py  experimental_cognitive.py  experimental_cognitive_capsule.py  experimental_cognitive_temporal_gate.py  experimental_language.py  experimental_moe.py  experimental_moe_capsule.py  experimental_svc_ingestion.py  experimental_temporal.py  experimental_vsa_batch.py  experimental_vsa_ops.py  experimental_vsa_resonator.py  hello_grilly.py  train_mlp.py
model/codebooks/: vocab.txt
notebooks/: generate_codebook.py  generate_cubemind_codebook.ipynb
pretraining/: pretrain_phase1.py  pretrain_phase2.py  test_generation_quality.py
pretraining/phase1/: query_multiverse.py  train_and_generate.py
scripts/: __init__.py  export_vsa_codebook.py  export_vsa_weights.py  generate_trajectories.py  generate_trajectories_multi_gpu.py  get_vocab.py  ingest_cubemind.py  ingest_svc.py  install_pyvma.py  poc_simhash_vsa.py  setup_a40_env.sh  train_student.py  vsa_inference_demo.py
shaders/: activation-gcu-backward.glsl  activation-gcu.glsl  activation-gelu.glsl  activation-relu-backward.glsl  activation-roswish-backward.glsl  activation-roswish.glsl  activation-silu-backward.glsl  activation-softmax-backward.glsl  activation-swiglu-backward.glsl  activation-swiglu.glsl  activation-tanh-backward.glsl  activation-tanh.glsl  adam-update.glsl  adamw-update.glsl  attention-backward.glsl  attention-mask.glsl  attention-output-gpt.glsl  attention-output-t5.glsl  attention-output.glsl  attention-scores.glsl  avgpool2d-backward.glsl  avgpool2d-forward.glsl  batch-similarity.glsl  batchnorm2d-backward.glsl  batchnorm2d-forward.glsl  circular-shift.glsl  contrastive-gradient.glsl  contrastive-loss.glsl  conv2d-backward-input.glsl  conv2d-backward-weight.glsl  conv2d-forward.glsl  convd_col2im.glsl  convd_col2im_noatomic.glsl  convd_im2col.glsl  cross-entropy-backward.glsl  dequant-4bit.glsl  embedding-lookup-tiled.glsl  embedding-pool-mask.glsl  faiss-topk.glsl  fnn-layernorm-backward.glsl  (+59 more)
shaders/experimental/: README.md  vsa-argmax-rows.glsl  vsa-bind-batch.glsl  vsa-bind.glsl  vsa-bundle-batch.glsl  vsa-bundle.glsl  vsa-fft-convolve.glsl  vsa-mask-selected.glsl  vsa-resonator-step.glsl  vsa-similarity-batch.glsl
shaders/spv/: activation-gcu-backward.spv  activation-gcu.spv  activation-gelu-backward.spv  activation-gelu.spv  activation-relu-backward.spv  activation-relu.spv  activation-roswish-backward.spv  activation-roswish.spv  activation-silu-backward.spv  activation-silu.spv  activation-softmax-backward.spv  activation-softmax.spv  activation-softplus.spv  activation-swiglu-backward.spv  activation-swiglu.spv  activation-tanh-backward.spv  activation-tanh.spv  adam-update.spv  adamw-update.spv  affect-adam.spv  affect-mlp-backward.spv  affect-mlp-forward.spv  attention-backward.spv  attention-concat-heads.spv  attention-mask.spv  attention-output-gpt.spv  attention-output-t5.spv  attention-output.spv  attention-prosody-modulation.spv  attention-scores.spv  avgpool2d-backward-new.spv  avgpool2d-backward.spv  avgpool2d-forward.spv  batch-similarity.spv  batchnorm2d-backward.spv  batchnorm2d-forward.spv  bridge-continuous-to-spike.spv  bridge-spike-to-continuous.spv  bridge-temporal-weights.spv  capsule-project.spv  (+134 more)
src/grilly/: __init__.py
src/grilly_next/: __init__.py
tests/: README.md  __init__.py  benchmark_snn_fashion_mnist.py  conftest.py  local_vsa_stress_test.py  test_adamw.py  test_attention.py  test_backward.py  test_baremetal_engine.py  test_batchnorm2d.py  test_checkpoint.py  test_conv2d.py  test_core.py  test_decoding.py  test_device_manager.py  test_functional.py  test_gemm_backward.py  test_gpu_operations.py  test_gru.py  test_hippocampus.py  test_huggingface_bridge.py  test_huggingface_t5.py  test_hypergradient.py  test_inference_ops.py  test_initialization.py  test_integration.py  test_integration_vulkan.py  test_learning.py  test_lora.py  test_lr_scheduler.py  test_lstm.py  test_memory_operations.py  test_multimodal.py  test_multiverse.py  test_onnx.py  test_optim_sgd_nlms.py  test_pooling.py  test_pytorch_compat.py  test_pytorch_ops.py  test_self_binarizing_mlp.py  (+20 more)
tests/experimental/: __init__.py  conftest.py  test_backend_vsa.py  test_backend_vsa_similarity_gemm.py  test_backend_vsa_topk.py  test_checkpoint_sentence_compress.py  test_cognitive_controller.py  test_cognitive_memory.py  test_cognitive_simulator.py  test_cognitive_world.py  test_integration.py  test_language_encoder.py  test_language_generator.py  test_language_parser.py  test_language_system.py  test_moe_relational.py  test_moe_routing.py  test_stable_hash_blake3.py  test_svc_ingest_speed.py  test_svc_ingestion.py  test_svc_integration.py  test_temporal_causal.py  test_temporal_counterfactual.py  (+4 more)
(+222 files in other folders)
