[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "grilly-next"
version = "0.1.1"
description = "GPU-accelerated neural network operations using Vulkan compute shaders"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nicolas Cloutier", email = "ncloutier@grillcheeseai.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "vulkan", "gpu", "neural-network", "snn", "compute-shaders",
    "gpu-acceleration", "machine-learning", "torch-alternative",
]

dependencies = [
    "numpy>=1.24",
    "grilly>=0.4.5",
    "spacy>=3.8.11",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
]
legacy = [
    # Retained for compatibility — SNN and core ops now in grilly>=0.4.5 C++ backend
    "vulkan>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
all = ["grilly-next[ml,legacy,dev]"]

[project.urls]
Homepage = "https://grillcheeseai.com"
Repository = "https://github.com/grillcheese-ai/grilly"
Documentation = "https://grillcheeseai.com"

# ── scikit-build-core configuration ──────────────────────────────────────

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/grilly_next"]
wheel.install-dir = "."

[tool.scikit-build.cmake.define]
# Vulkan SDK path — scikit-build passes this to CMake
# Users should set VULKAN_SDK env var or CMAKE_PREFIX_PATH
PYTHON_EXECUTABLE = "${PYTHON_EXECUTABLE}"

# ── Tool configuration ───────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
    | __pycache__
    | \.venv
    | build
    | dist
    | shaders/spv
    | third_party
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",
    "E402",  # import not at top (conditional imports)
    "E722",  # bare except (used for broad fallbacks)
    "E741",  # ambiguous variable name (l, O)
    "F403",  # star import (vulkan)
    "F405",  # star import undefined (vulkan)
    "F811",  # redefined while unused
    "N801",  # class name (no_grad, enable_grad context managers)
    "N802",  # function name (VK_MAKE_VERSION etc.)
    "N803",  # argument name (W_gate, W_up ML convention)
    "N806",  # variable name (X, y, N ML convention)
    "N811",  # constant imported as non-constant
    "N812",  # lowercase imported as non-lowercase
    "N817",  # camelcase imported as acronym
    "N999",  # module name (09_data_loading.py tutorials)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F401"]
"src/grilly_next/utils/numba_ops.py" = ["F401"]
"src/grilly_next/backend/snn_compute.py" = ["F401"]
"src/grilly_next/nn/module.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/grilly_next"]
omit = [
    "tests/*",
    "benchmarks/*",
    "examples/*",
    "src/grilly_next/utils/vulkan_sentence_transformer.py",
    "src/grilly_next/utils/hippocampal_checkpoint.py",
    "src/grilly_next/utils/visualization.py",
    "src/grilly_next/backend/vma_wrapper.py",
    "src/grilly_next/backend/snn_visualizer.py",
    "src/grilly_next/backend/hilbert.py",
    "src/grilly_next/backend/_glu_append.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 40
